--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h2><img src="/images/icon.svg" />Rally Copilot</h2>
     <button id="myButton">Avanzar Sprint</button>
-    <script src="changeStatus.js"></script>
-    <script src="sprintNumber.js"></script>
+    <script src="js/changeStatus.js"></script>
+    <script src="js/sprintNumber.js"></script>
 </body>
 
 </html>
